tests/reference/asr-implicit_typing4-df7d614.stderr
semantic error: Dummy argument 'matvect' not defined
 --> tests/errors/implicit_typing4.f90:1:1 - 3:3
  |
1 |    subroutine iddr_rsvd(matvect)
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
  |
3 |    end
  | ...^^^ 
